# iais-finetuning

./: .gitignore  .pre-commit-config.yaml  README.md  evaluate.py  pyproject.toml  train.py
configs/: eval.yaml  train.yaml
src/text2cypher/: __init__.py  config.py  data.py  evaluate.py  metrics.py  model.py  train.py
src/text2cypher/utils/: __init__.py  reproducibility.py  tracking.py
tests/: __init__.py  test_config.py  test_data.py  test_evaluate.py  test_metrics.py  test_model.py  test_train.py  test_utils.py
