[project]
name = "text2cypher-finetune"
version = "0.1.0"
description = "Fine-tune SmolLM2-135M-Instruct for Text2Cypher"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "torch==2.3.1",
    "transformers==4.44.2",
    "datasets==2.21.0",
    "peft==0.12.0",
    "accelerate==0.33.0",
    "numpy==1.26.4",
    "safetensors==0.4.3",
    "tqdm==4.66.4",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
# Optional experiment tracking. Install with: uv sync --extra tracking
tracking = ["mlflow>=2.14.0"]

[dependency-groups]
dev = [
    "mypy>=2.1.0",
    "pre-commit>=3.7.0",
    "pytest==8.3.2",
    "pytest-cov==5.0.0",
    "ruff>=0.15.18",
    "types-pyyaml>=6.0.12.20260518",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/text2cypher"]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "B", "UP"]

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
check_untyped_defs = true

[[tool.mypy.overrides]]
module = "tests.*"
check_untyped_defs = false
